--- a/src/composants/Entete.scss
+++ b/src/composants/Entete.scss
@@ -8,20 +8,19 @@
   align-items: center;
   justify-content: space-between;
   color: white;
-  font-size: 0.8em;
+  font-size: 1em;
   padding: 2vh;
 
   .avatar{
     display: flex;
     align-items: center;
-    
+    justify-content: space-between;
+    width: 170px;
 
     img{
       border-radius: 100%;
-      // object-fit: scale-down;
-      height: 20px;
-      width: 20px;
-      margin-left: 2vw;
+      height: 30px;
+      width: 30px;
     }
   }
 }
