--- a/src/composants/Dossier.scss
+++ b/src/composants/Dossier.scss
@@ -19,13 +19,13 @@
     }
   }
   .couverture{
-    
+
     .deplacer{
       position: absolute;
       margin: 7px 0 0 7px;
       background-color: black;
       border-radius: 100%;
-      opacity: 30%;
+      opacity: 0.3;
       padding: 4px;
       padding-bottom: 0;
       cursor: move;
